--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ html,body{
 }
 .all_wrapper{
 	width: 100%;
-	background-image: linear-gradient(to bottom,var(--main-color),var(--main-color),var(--sub-color));
+	background-image: linear-gradient(to bottom,#E96196,#E96196,#4653B6);
 	background-repeat: no-repeat;
 	background-size: cover;
 }
@@ -128,7 +128,8 @@ a:hover{
 }
 img{
 	width: 100%;
-	object-fit: cover;
+	-o-object-fit: cover;
+	   object-fit: cover;
 }
 [class*="_wrapper"]{
 	overflow: hidden;
@@ -181,7 +182,7 @@ img{
 	-webkit-transform: translate(0, 0);
 }
 .Inview [class*="img"] {
-	border: 0px solid var(--sub-color);
+	border: 0px solid #4653B6;
 	opacity: 0;
 	transform: scale(.8,.8);
 	-webkit-transform: scale(.8,.8);
@@ -230,12 +231,15 @@ img{
 }
 .grid-sub{
 	grid-gap: 1rem;
-    grid-template-columns: repeat(2,1fr);
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2,1fr);
 }
 .grid-1{
 	grid-gap: 0;
-	grid-template-columns: 100%;
-	grid-template-rows: repeat(3,1fr);
+	-ms-grid-columns: 100%;
+	    grid-template-columns: 100%;
+	-ms-grid-rows: (1fr)[3];
+	    grid-template-rows: repeat(3,1fr);
 	align-items: center;
 	justify-content: center;
 }
@@ -251,16 +255,18 @@ img{
 	right: 0;
 	width: 3rem;
 	height: 3rem;
-	background-color: var(--main-color);
+	background-color: #E96196;
 	border: none;
 	cursor: pointer;
 	overflow: hidden;
-	transform: translateX(101%);
+	-webkit-transform: translateX(101%);
+	        transform: translateX(101%);
 	transition: .3s;
 	z-index: 999;
 }
 .navbar_wrapper.fixed .navbar_toggler,.navbar_toggler.active{
-	transform: translateX(0);
+	-webkit-transform: translateX(0);
+	        transform: translateX(0);
 }
 .navbar_toggler::before,.navbar_toggler::after{
 	content: "";
@@ -270,19 +276,23 @@ img{
 	display: block;
 	width: .25rem;
 	height: calc(100% + .25rem);
-	background-color: var(--sub-color);
-	transform-origin: top right;
-	transform: scale(1,0);
+	background-color: #4653B6;
+	-webkit-transform-origin: top right;
+	        transform-origin: top right;
+	-webkit-transform: scale(1,0);
+	        transform: scale(1,0);
 	transition: .3s;
 }
 .navbar_toggler::after{
 	top: calc(100% - .25rem);
 	width: calc(100% + .25rem);
 	height: .25rem;
-	transform: scale(0,1);
+	-webkit-transform: scale(0,1);
+	        transform: scale(0,1);
 }
 .navbar_toggler:hover::before,.navbar_toggler:hover::after{
-	transform: scale(1,1);
+	-webkit-transform: scale(1,1);
+	        transform: scale(1,1);
 }
 .navbar_toggler span{
 	position: absolute;
@@ -291,8 +301,9 @@ img{
 	display: block;
 	width:75%;
 	height: 2px;
-	background-color: var(--font-color);
-	transform-origin: left;
+	background-color: #00200D;
+	-webkit-transform-origin: left;
+	        transform-origin: left;
 	transition: .3s;
 }
 .navbar_toggler span:nth-of-type(2){
@@ -304,18 +315,21 @@ img{
 	width: 1rem;
 	height: 1rem;
 	background-color: transparent;
-	border: 2px solid var(--font-color);
+	border: 2px solid #00200D;
 	border-bottom-color: transparent;
 	border-left-color: transparent;
-	transform-origin: center;
-	transform: translate(-3rem,-50%) rotateZ(45deg);
+	-webkit-transform-origin: center;
+	        transform-origin: center;
+	-webkit-transform: translate(-3rem,-50%) rotateZ(45deg);
+	        transform: translate(-3rem,-50%) rotateZ(45deg);
 }
 .navbar_toggler.active span{
 	top: calc(100% / 2 - 1px);
 }
 .navbar_toggler.active span:nth-of-type(3){
 	top: calc(100% / 2);
-	transform: translate(0,-50%) rotateZ(45deg);
+	-webkit-transform: translate(0,-50%) rotateZ(45deg);
+	        transform: translate(0,-50%) rotateZ(45deg);
 }
 .navbar_content{
 	position: fixed;
@@ -329,16 +343,19 @@ img{
 	--template-cols-xl:repeat(2,1fr);
 	width: 100%;
 	height: 100vh;
-	transform: translateX(100%);
+	-webkit-transform: translateX(100%);
+	        transform: translateX(100%);
 	transition: .5s;
 	z-index: 989;
-	background-image: linear-gradient(to right, var(--main-color),var(--accent-color));
+	background-image: linear-gradient(to right, #E96196,var(--accent-color));
 }
 .navbar_toggler.active + .navbar_content{
-	transform: translateX(0);
+	-webkit-transform: translateX(0);
+	        transform: translateX(0);
 }
 .navbar_inner{
-	align-self: center;
+	-ms-grid-row-align: center;
+	    align-self: center;
 }
 .navbar_inner:nth-of-type(2){
 	margin: 10%;
@@ -369,74 +386,89 @@ img{
 }
 .navbar_link{
 	text-transform: uppercase;
-	color:var(--sub-color);
+	color:#4653B6;
 	padding: .5rem;
 	text-decoration: none;
 	transition: .3s;
 }
 .navbar_link:hover{
 	text-decoration: none;
-	color: var(--base-color);
-	text-shadow:2px 2px 0 var(--sub-color),
-             -2px 2px 0 var(--sub-color),
-             2px -2px 0 var(--sub-color),
-             -2px -2px 0 var(--sub-color);
+	color: #ECF5F0;
+	text-shadow:2px 2px 0 #4653B6,
+             -2px 2px 0 #4653B6,
+             2px -2px 0 #4653B6,
+             -2px -2px 0 #4653B6;
 }
 .current .navbar_link{
-	color: var(--base-color);
-	text-shadow:1px 1px 0 var(--sub-color),
-             -1px 1px 0 var(--sub-color),
-             1px -1px 0 var(--sub-color),
-             -1px -1px 0 var(--sub-color);
+	color: #ECF5F0;
+	text-shadow:1px 1px 0 #4653B6,
+             -1px 1px 0 #4653B6,
+             1px -1px 0 #4653B6,
+             -1px -1px 0 #4653B6;
 }
 /*header*/
 .header_wrapper{
 	position: relative;
 	width: 100%;
 	height: 100vh;
-	color: var(--base-color);
+	color: #ECF5F0;
 }
 .header_bgr{
 	position: absolute;
 	top: 0;
 	left: 0;
 	grid-gap: .5rem;
-	grid-template-columns: repeat(3,1fr);
-	grid-template-rows: repeat(3,1fr);
+	-ms-grid-columns: (1fr)[3];
+	    grid-template-columns: repeat(3,1fr);
+	-ms-grid-rows: (1fr)[3];
+	    grid-template-rows: repeat(3,1fr);
 	width: 100%;
 	height: 100%;
 }
 .header_img{
-	border: .5rem solid var(--sub-color);
+	border: .5rem solid #4653B6;
 }
 .header_bgr .header_img{
+	-ms-grid-column: 3;
 	grid-column: 3;
+	-ms-grid-row: 1;
 	grid-row: 1;
 	border: none;
-	object-position: top;
+	-o-object-position: top;
+	   object-position: top;
 }
 .header_bgr .header_img:nth-of-type(2){
+	-ms-grid-column: 3;
 	grid-column: 3;
+	-ms-grid-row: 2;
 	grid-row: 2;
-	object-position: center;
+	-o-object-position: center;
+	   object-position: center;
 	transition-delay: .1s;
 }
 .header_bgr .header_img:nth-of-type(3){
+	-ms-grid-column: 1;
 	grid-column: 1;
+	-ms-grid-row: 2;
 	grid-row: 2;
-	object-position: center right;
+	-o-object-position: center right;
+	   object-position: center right;
 	transition-delay: .2s;
 }
 .header_bgr .header_img:nth-of-type(4){
+	-ms-grid-column: 1;
 	grid-column: 1;
+	-ms-grid-row: 3;
 	grid-row: 3;
 	transition-delay: .3s;
 }
 .header_content{
 	position: relative;
 	grid-gap: .5rem;
-	grid-template-columns: 1fr;
-	grid-template-rows: 1fr 4fr 1fr;
+	-ms-grid-columns: 1fr;
+	    grid-template-columns: 1fr;
+	-ms-grid-rows: 1fr 4fr 1fr;
+	    grid-template-rows: 1fr 4fr 1fr;
 	width: 100%;
 	height: 100%;
 	padding: calc(100vh/5) calc(100vw/5);
@@ -447,24 +479,26 @@ img{
 	top: calc(100vh/5 - 2rem);
 	left: calc(100vw/5 - 4rem);
     margin: 0;
-	align-self: center;
+	-ms-grid-row-align: center;
+	    align-self: center;
 	font-size: 2.75rem;
 	font-family: 'Work Sans', cursive;
-	color: var(--main-color);
+	color: #E96196;
 	transition: .5s .8s; 
     z-index: 799;
 }
 .Viewing .header_title{
-	text-shadow:2px 2px 0 var(--sub-color),
-             -2px 2px 0 var(--sub-color),
-             2px -2px 0 var(--sub-color),
-             -2px -2px 0 var(--sub-color);
+	text-shadow:2px 2px 0 #4653B6,
+             -2px 2px 0 #4653B6,
+             2px -2px 0 #4653B6,
+             -2px -2px 0 #4653B6;
 }
 .header_content .header_img{
 	width: 100%;
 	height: 100%;
-    background-color: var(--main-color);
-	object-fit: cover;
+    background-color: #E96196;
+	-o-object-fit: cover;
+	   object-fit: cover;
 	z-index: 789;
 }
 .header_content .header_description{
@@ -472,7 +506,11 @@ img{
 	right:  calc(100vw/5 - 4rem);
 	bottom: calc(100vh/5 - 3.5rem);
 	justify-self: flex-end;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
     width: fit-content;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
     height: fit-content;
     margin: 0;
     line-height: 1.5;
@@ -484,7 +522,7 @@ img{
 	display: inline-block;
     padding: .125rem .25rem;
 	margin: .125rem 0;
-	background-color: var(--sub-color);
+	background-color: #4653B6;
 }
 /*footer*/
 /*main*/
@@ -533,8 +571,8 @@ img{
 }
 /**dark*/
 .grid_item.dark > .grid_body{
-	background-color: var(--font-color);
-	color: var(--base-color);
+	background-color: #00200D;
+	color: #ECF5F0;
 }
 /**title,text*/
 .grid_item.title > .grid_body,.grid_item.text > .grid_body{
@@ -544,9 +582,9 @@ img{
 }
 /**title*/
 .grid_item.title > .grid_body{
-	background-color: var(--font-color);
+	background-color: #00200D;
 	font-family: 'Coiny', cursive;
-	color: var(--base-color);
+	color: #ECF5F0;
 	text-transform: uppercase;
 }
 /**text*/
@@ -565,21 +603,25 @@ img{
 .grid_item.img > .grid_body{
 	display: block;
 	width: 100%;
-	background-color: var(--main-color);
-	border: 3px solid var(--sub-color);
-	object-fit: cover;
-	object-position: center;
+	background-color: #E96196;
+	border: 3px solid #4653B6;
+	-o-object-fit: cover;
+	   object-fit: cover;
+	-o-object-position: center;
+	   object-position: center;
 	transition: .3s;
 }
 .grid_body .body_description.img{
 	height: 50%;
-	object-fit: contain;
-	object-position: top left;
+	-o-object-fit: contain;
+	   object-fit: contain;
+	-o-object-position: top left;
+	   object-position: top left;
 }
 /**baloon*/
 .grid_item.baloon{
 	background-color: transparent;
-	color: var(--font-color);
+	color: #00200D;
 }
 .grid_item.baloon::before{
 	background-image: url(./lib/images/baloon.png);
@@ -588,10 +630,12 @@ img{
 	background-position: center;
 }
 .grid_item.baloon.toLeft::before{
-	transform: scale(-1,1);
+	-webkit-transform: scale(-1,1);
+	        transform: scale(-1,1);
 }
 .grid_item.baloon.toRight::before{
-	transform: scale(1,1);
+	-webkit-transform: scale(1,1);
+	        transform: scale(1,1);
 }
 .grid_item.baloon > .grid_body{
     padding: 25% 15%;
@@ -621,47 +665,51 @@ img{
 .grid_item.link > .grid_body{
 	background-color: var(--accent-color);
 	font-family: 'Coiny', cursive;
-	color: var(--font-color);
+	color: #00200D;
 	text-decoration: none;
 	transition: .3s;
 }
 .grid_item.link > .grid_body:hover{
-	color: var(--base-color);
+	color: #ECF5F0;
 	text-decoration: none;
 }
 .grid_item.link > .grid_body{
 	border:2px solid var(--accent-color);
 }
 .grid_item.link > .grid_body:hover{
-	background-color: var(--base-color);
-	color: var(--font-color);
+	background-color: #ECF5F0;
+	color: #00200D;
 }
 /**post*/
 .grid_item.post > .grid_body{
 	grid-gap: .5rem;
-	grid-template-columns: 1fr 3fr;
-	grid-template-rows: 1fr;
+	-ms-grid-columns: 1fr 3fr;
+	    grid-template-columns: 1fr 3fr;
+	-ms-grid-rows: 1fr;
+	    grid-template-rows: 1fr;
 	border: 2px solid var(--accent-color);
 	text-align: center;
 }
 .grid_body .post_description .post_link{
+	-ms-grid-row: 3;
 	grid-row: 3;
 }
 .post_content{
 	grid-gap: .5rem;
-	grid-template-columns: 1fr;
+	-ms-grid-columns: 1fr;
+	    grid-template-columns: 1fr;
 }
 .post_link{
 	padding: .25rem .5rem;
 	background-color: var(--accent-color);
 	border: 2px solid var(--accent-color);
 	margin: 0 1rem;
-	color: var(--base-color);
+	color: #ECF5F0;
 	text-decoration: none;
 	transition: .3s;
 }
 .post_link:hover{
-	background-color: var(--base-color);
+	background-color: #ECF5F0;
 	color: var(--accent-color);
 	text-decoration: none;
 }
@@ -674,14 +722,15 @@ img{
 }
 /**main*/
 #IndexMainImg1 .grid_body{
-	object-position: top;
+	-o-object-position: top;
+	   object-position: top;
 }
 /**singular*/
 .singular .grid_wrapper{
 	position: relative;
 	padding: 1rem 0;
 	background-color: rgba(247,247,247,.8);
-	border: 2px solid var(--font-color);
+	border: 2px solid #00200D;
 	z-index: 799;
 }
 article{
@@ -689,17 +738,17 @@ article{
 }
 .singular h3{
 	padding: .75rem .5rem;
-	background-color: var(--font-color);
-	color: var(--base-color);
+	background-color: #00200D;
+	color: #ECF5F0;
 }
 .singular h4{
 	padding: .5rem .25rem;
-	border: 2px solid var(--font-color);
+	border: 2px solid #00200D;
 	margin: 1rem;
 }
 .singular h5{
 	padding: .25rem 0;
-	border-bottom: 2px solid var(--font-color);
+	border-bottom: 2px solid #00200D;
 	margin: 1rem 2rem;
 }
 /***breadcrumb*/
@@ -712,7 +761,7 @@ article{
 	display: inline-block;
 	width: 2px;
 	height: calc(1rem * 1.2 + 2px*2);
-	background-color: var(--base-color);
+	background-color: #ECF5F0;
 	margin: .25rem 0;
 	margin-left:.375rem;
 	vertical-align: top;
@@ -723,15 +772,15 @@ article{
 .breadcrumb_link,.breadcrumb_link:hover{
 	display: inline-block;
 	padding: .25rem;
-	background-color: var(--base-color);
-	border: 2px solid var(--base-color);
+	background-color: #ECF5F0;
+	border: 2px solid #ECF5F0;
 	color: var(--accent-color);
 	text-decoration: none;
 	transition: .5s;
 }
 .breadcrumb_link:hover{
 	background-color: var(--accent-color);
-	color: var(--base-color);
+	color: #ECF5F0;
 }
 /**page*/
 .page .header_wrapper{
@@ -758,23 +807,21 @@ article{
   	--template-cols-xl: 400px 1fr;
 }
 .single article{
-	-webkit-order: 2;
 	-moz-order: 2;
 	-ms-order: 2;
 	-o-order: 2;
 	order: 2;
 }
 .single .sidebar_wrapper{
-	-webkit-order: 1;
 	-moz-order: 1;
 	-ms-order: 1;
 	-o-order: 1;
 	order: 1;
-	border-right: 2px solid var(--font-color);
+	border-right: 2px solid #00200D;
 }
 .single .grid-main,.page .grid-main{
 	padding-bottom: 1rem;
-	border-bottom: 2px solid var(--font-color); 
+	border-bottom: 2px solid #00200D; 
 	margin-bottom: 1rem;
 }
 /*media queries*/
@@ -789,7 +836,7 @@ article{
 	    max-width: calc(100vw - 2rem);
 	}
 	.grid_item.baloon::before{
-		background-color: var(--base-color);
+		background-color: #ECF5F0;
 		background-image: none;
 	}
 	.grid_item.baloon .grid_body{
