--- a/style.css
+++ b/style.css
@@ -184,6 +184,8 @@ img{
 .Inview [class*="img"] {
 	border: 0px solid #4653B6;
 	opacity: 0;
+	-webkit-transform-origin: center;
+	        transform-origin: center;
 	transform: scale(.8,.8);
 	-webkit-transform: scale(.8,.8);
 	transition: .3s, border .3s .5s;
@@ -362,7 +364,7 @@ img{
 }
 .navbar_brand{
 	padding: 0;
-	margin: 0 0 2rem 0;
+	margin: 0 0 1rem 0;
 	font-size: 1.75rem;
 }
 .navbar_logo{
@@ -387,7 +389,7 @@ img{
 .navbar_link{
 	text-transform: uppercase;
 	color:#4653B6;
-	padding: .5rem;
+	padding: .25rem;
 	text-decoration: none;
 	transition: .3s;
 }
@@ -589,6 +591,7 @@ img{
 }
 /**text*/
 .grid_item.text > .grid_body .body_description{
+	position: relative;
 	justify-content: flex-start;
 	align-self: flex-start;
 	margin: 0;
