--- a/style.css
+++ b/style.css
@@ -504,6 +504,9 @@ img{
              2px -2px 0 #4653B6,
              -2px -2px 0 #4653B6;
 }
+.header_img{
+	border: none;
+}
 .header_content .header_img{
 	width: 100%;
 	height: 100%;
@@ -736,6 +739,9 @@ img{
 #IndexMainImg1 .grid_body{
 	-o-object-position: top;
 	   object-position: top;
+}
+#instagram{
+	overflow: hidden;
 }
 /**singular*/
 .singular .grid_wrapper{
