--- a/style.css
+++ b/style.css
@@ -580,6 +580,9 @@ img{
 	height: 100%;
 	background-color: rgba(247,247,247,.9);
 }
+.grid_body p{
+	margin: 0;
+}
 .grid_body .body_description{
 	font-family: 'Coiny', cursive;
 }
