--- a/style.css
+++ b/style.css
@@ -193,7 +193,7 @@ img{
 	        transform-origin: center;
 	transform: scale(.8,.8);
 	-webkit-transform: scale(.8,.8);
-	transition: .3s, border .3s .5s;
+	transition: .3s, border .8s cubic-bezier(.82,0,.71,.22);
 }
 .Viewing [class*="img"]{
 	border-width: .5rem;
