--- a/style.css
+++ b/style.css
@@ -245,7 +245,7 @@ img{
 	grid-gap: 0;
 	-ms-grid-columns: 100%;
 	    grid-template-columns: 100%;
-	--template-rows-xs:10% 80% 10%;
+	--template-rows-xs:12% 76% 12%;
 	--template-rows-sm:15% 70% 15%;
 	--template-rows-md:30% 40% 30%;
 	--template-rows-lg:repeat(3,calc(100%/3));
@@ -612,7 +612,8 @@ img{
 .grid_item.text > .grid_body .body_description{
 	position: relative;
 	justify-content: flex-start;
-	align-self: start;
+	-ms-grid-row-align:  flex-start;
+	    align-self:  flex-start;
 	margin: 0;
 	font-weight: 300;
 	text-align: left;
