--- a/style.css
+++ b/style.css
@@ -193,13 +193,13 @@ img{
 	        transform-origin: center;
 	transform: scale(.8,.8);
 	-webkit-transform: scale(.8,.8);
-	transition: .3s, border .8s cubic-bezier(.82,0,.71,.22);
 }
 .Viewing [class*="img"]{
 	border-width: .5rem;
 	opacity: 1.0;
 	transform: scale(1,1);
 	-webkit-transform: scale(1,1);
+	transition: .3s, border .3s .5s;
 }
 .Inview.grid_item {
 	opacity: 0;
