--- a/style.css
+++ b/style.css
@@ -187,6 +187,11 @@ img{
 	-webkit-transform: translate(0, 0);
 }
 .Inview [class*="img"] {
+	border: 0px solid #4653B6;
+	border-top-width: 0;
+	border-right-width: 0;
+	border-bottom-width: 0;
+	border-left-width: 0;
 	opacity: 0;
 	-webkit-transform-origin: center;
 	        transform-origin: center;
@@ -194,6 +199,7 @@ img{
 	-webkit-transform: scale(.8,.8);
 }
 .Viewing [class*="img"]{
+	border-width: .5rem;
 	opacity: 1.0;
 	transform: scale(1,1);
 	-webkit-transform: scale(1,1);
