--- a/style.css
+++ b/style.css
@@ -187,11 +187,8 @@ img{
 	-webkit-transform: translate(0, 0);
 }
 .Inview [class*="img"] {
-	border: 0px solid #4653B6;
-	border-top-width: 0;
-	border-right-width: 0;
-	border-bottom-width: 0;
-	border-left-width: 0;
+	padding: 0;
+	background-color: #4653B6;
 	opacity: 0;
 	-webkit-transform-origin: center;
 	        transform-origin: center;
@@ -199,11 +196,11 @@ img{
 	-webkit-transform: scale(.8,.8);
 }
 .Viewing [class*="img"]{
-	border-width: .5rem;
+	padding: .5rem;
 	opacity: 1.0;
 	transform: scale(1,1);
 	-webkit-transform: scale(1,1);
-	transition: .3s, border .3s .5s;
+	transition: .3s, padding .3s .5s;
 }
 .Inview.grid_item {
 	opacity: 0;
@@ -453,7 +450,7 @@ img{
 	grid-column: 3;
 	-ms-grid-row: 1;
 	grid-row: 1;
-	border: none;
+	padding: 0;
 	-o-object-position: top;
 	   object-position: top;
 }
@@ -519,7 +516,6 @@ img{
 .header_content .header_img{
 	width: 100%;
 	height: 100%;
-    background-color: #E96196;
 	-o-object-fit: cover;
 	   object-fit: cover;
 	z-index: 789;
