--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@ img{
 	opacity: 1.0;
 	transform: scale(1,1);
 	-webkit-transform: scale(1,1);
-	transition: .3s, padding .3s .5s;
+	transition:all .3s, padding .8s;
 }
 .Inview.grid_item {
 	opacity: 0;
